fixed the scroll menu on mobile, and aligned the images on categories

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -99,7 +99,8 @@ a {
 }
 
 .banner {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.30)), url(../products/darkened-background.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(../products/darkened-background.jpeg);
   width: 100%;
   height: 100vh;
   background-position: center;
@@ -187,7 +188,6 @@ button {
 .sign__button {
   padding: -0.5px;
 }
-
 
 .sign__button {
   display: block;
@@ -369,31 +369,28 @@ footer a:hover {
   margin-left: -2%;
 }
 
-
 .form__a {
   margin-top: 110px;
   margin-left: 80px;
 }
-
 
 /*Categories Page*/
 
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-
 }
 
 .logo-cat {
-  max-width: 200px;
+  max-width: 150px;
   position: absolute;
   top: 4%;
   left: 5%;
   z-index: 1;
 }
 
-#test{
-  margin-top: -15em;
+#test {
+  margin-top: -17em;
   display: flex;
   flex-direction: row;
 }
@@ -407,22 +404,29 @@ footer a:hover {
 }
 
 .container-child {
-  padding: 0.5em;
+  padding-top: 19em;
   text-align: center;
 }
 
+.container-child p {
+  font-size: 16px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .container-img {
   width: 100%;
   height: 100%;
 }
+
 /* Checkout page */
 
 .form {
   margin-top: 130px;
   margin-left: 80px;
 }
-
 
 .flex {
   width: 70%;
@@ -454,7 +458,6 @@ footer a:hover {
   text-align: center;
 }
 
-
 .bottom-box {
   width: 100%;
   display: flex;
@@ -466,13 +469,11 @@ footer a:hover {
   padding: 0.5em;
 }
 
-
 .dark-link {
   padding: 6px 34px;
   margin-top: 2em;
   width: 100%;
 }
-
 
 .box-img {
   margin-top: -16.9px;
@@ -545,8 +546,9 @@ h1 {
 
 /* oops page */
 
-.oops, .link {
-  inline-size:max-content;
+.oops,
+.link {
+  inline-size: max-content;
   margin-top: 140px;
   margin-left: 135px;
   font-size: 20px;
@@ -564,6 +566,25 @@ h1 {
 
 /* Media queries */
 
+@media (max-width:1624px) {
+  .container-child img {
+    object-fit: cover;
+    max-width: 500px;
+    max-height: 709px;
+    /*the smallest image*/
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container-child p {
+    min-height: 70px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
+}
 
 /* For small tablets */
 @media (max-width: 768px) {
@@ -596,6 +617,26 @@ h1 {
 
 .about {
   z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .container-child {
+    padding-top: 0em;
+    display: inline-block;
+    text-align: center;
+  }
+
+  #test {
+    margin-top: 130px;
+    display: inline-block;
+    text-align: center
+  }
+
+  html,
+  body {
+    overflow: visible;
+    background: #000;
+  }
 }
 
 /* For smartphones */
@@ -634,7 +675,6 @@ h1 {
     top: 5em;
     left: 10%;
     width: 60%;
-
   }
 
   .cta,
@@ -690,7 +730,6 @@ h1 {
     padding-top: 20px;
     margin-left: 10px;
   }
-
 
   .box {
     margin-top: -17em;
@@ -759,7 +798,6 @@ h1 {
   .success {
     margin-top: 5em;
     font-size: 40px;
-
   }
 
   .shop,
@@ -767,10 +805,9 @@ h1 {
     margin-left: -10%;
   }
 
-
-
   .header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)), url(../products/Square_Eyes_Cover4.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+      url(../products/Square_Eyes_Cover4.jpeg);
   }
 }
 
@@ -785,8 +822,16 @@ h1 {
 
 .container-child {
   flex-direction: row;
-  padding-top: 20em;
+
   align-items: center;
+}
+
+.container-child p {
+  max-width: 100%;
+  max-height: 50em;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
 
 .loader {
@@ -800,6 +845,11 @@ h1 {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
